@@ -2,7 +2,7 @@
 
 Stubdir = @STUBSPATH@/webserver
 
-nobase_Stub_DATA = ports.conf.mas ldap_userdir.conf.mas vhost.mas
+nobase_Stub_DATA = ports.conf.mas ldap_userdir.conf.mas default.mas vhost.mas
 
 EXTRA_DIST = $(nobase_Stub_DATA)
 
