@@ -10,4 +10,5 @@
 <%args>
   $portNumber
 </%args>
+NameVirtualHost *:<% $portNumber %>
 Listen <% $portNumber %>
